# dictr

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  install.sh  shell.nix
.github/workflows/: ci.yml  release.yml
contrib/: dictr-i3blocks  dictr.service
src/: audio.rs  config.rs  hotkey.rs  lib.rs  main.rs  output.rs  status.rs  transcribe.rs
tests/: e2e.rs
